--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,30 +1,68 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Spring Security Example</title>
+    <title>User Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-<h1>User, welcome spring boot security page!</h1>
-<table>
-    <thead>
-    <tr>
-        <th>Username</th>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Roles</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="user: ${user}">
-        <td th:text="${user.username}"></td>
-        <td th:text="${user.name}"></td>
-        <td th:text="${user.email}"></td>
-        <td th:each="role : ${user.roles}">
-            <span th:text="${role.name}"/>
-    </tr>
-    </tbody>
-</table>
-<a th:href="@{/logout}">Logout</a>
-
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light">
+        <div class="container-fluid">
+            <div>
+                <span class="fw-bolder" th:text="${user.email}">Email address</span>
+                <span> with roles: </span>
+                <span th:text="${user.roles}">Roles</span>
+            </div>
+            <a class="text-decoration-none font-weight-bold text-secondary" th:href="@{/logout}">Logout</a>
+        </div>
+    </nav>
+</header>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col bg-white px-0">
+            <div class="nav flex-column nav-pills" aria-orientation="vertical">
+                <button class="nav-link active text-start" type="button">User</button>
+            </div>
+        </div>
+        <div class="col-10 vh-100 bg-light">
+            <div class="tab-content">
+                <div class="tab-pane fade show active">
+                    <h1>User information-page</h1>
+                    <div class="container-fluid">
+                        <div class="row border">
+                            <h5>About user</h5>
+                        </div>
+                        <div class="row border bg-white">
+                            <table class="table">
+                                <thead>
+                                <tr>
+                                    <th scope="col">ID</th>
+                                    <th scope="col">Username</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">E-mail</th>
+                                    <th scope="col">Role</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr class="table-light" th:object="${user}">
+                                    <td th:text="*{id}"/>
+                                    <td th:text="*{username}"/>
+                                    <td th:text="*{name}"/>
+                                    <td th:text="*{email}"/>
+                                    <td>
+                                        <th:block th:each="role : *{roles}">
+                                            <span th:text="${role.name}"/>
+                                        </th:block>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
