--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -185,7 +185,7 @@
                                                             <input type="text" class="form-control"
                                                                    th:value="${user.password}"
                                                                    id="updatePassword" name="password"
-                                                                   placeholder="password"/>
+                                                                   placeholder="password" disabled/>
                                                         </div>
                                                         <div class="form-group m-3">
                                                             <label for="updateName" class="col-form-label">Name</label>
