--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -37,25 +37,15 @@
                             <table class="table">
                                 <thead>
                                 <tr>
-                                    <th scope="col">ID</th>
-                                    <th scope="col">Username</th>
-                                    <th scope="col">Name</th>
-                                    <th scope="col">E-mail</th>
-                                    <th scope="col">Role</th>
+                                    <th>ID</th>
+                                    <th>Username</th>
+                                    <th>Name</th>
+                                    <th>E-mail</th>
+                                    <th>Role</th>
                                 </tr>
                                 </thead>
-                                <tbody>
-                                <tr class="table-light" th:object="${user}">
-                                    <td th:text="*{id}"/>
-                                    <td th:text="*{username}"/>
-                                    <td th:text="*{name}"/>
-                                    <td th:text="*{email}"/>
-                                    <td>
-                                        <th:block th:each="role : *{roles}">
-                                            <span th:text="${role.toString()}"/>
-                                        </th:block>
-                                    </td>
-                                </tr>
+                                <tbody id="userTable">
+                                </tbody>
                             </table>
                         </div>
                     </div>
@@ -64,5 +54,14 @@
         </div>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+<script
+        src="https://code.jquery.com/jquery-3.6.3.js"
+        integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
+        crossorigin="anonymous">
+</script>
+<script type="text/javascript" src="/user.js"></script>
 </body>
 </html>
